[package]
name = "darkpicolib"
version = "0.1.0"
edition = "2024"

[lib]
name = "darkpicolib"
path = "src/lib.rs"
test = false
doctest = false
bench = false

[dependencies]
cyw43 = { version = "0.6.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.9.0", features = ["defmt"] }
defmt = "1.0"
embassy-executor = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-net = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "multicast"] }
embassy-rp = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564", features = ["defmt"] }
embedded-hal = "1.0"
fixed = "1.29"
heapless = { version = "0.9", features = ["defmt", "serde"] }
i2c-character-display = { version = "0.5", features = ["defmt"] }
libm = "0.2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = "2.1"
thiserror = { version = "2.0", default-features = false }
usbd-hid = "0.9"

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564" }
embassy-executor = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564" }
embassy-futures = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564" }
embassy-net = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564" }
embassy-net-driver = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564" }
embassy-net-driver-channel = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564" }
embassy-rp = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564" }
embassy-sync = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564" }
embassy-time = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564" }
embassy-usb = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564" }
embassy-usb-driver = { git = "https://github.com/darkcodi/embassy", rev = "760eb3b8d4725432588d4ee54ebaaa10f012a564" }
